--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
         <h1>Intérprete de Libras Automático</h1>
         
         <div id="webcam-container">
-            <div id="webcam-wrapper">
-                <video id="webcam" autoplay playsinline></video>
-                <canvas id="canvas"></canvas>
-            </div>
+            <div id="webcam-wrapper"></div>
             <button id="start-btn">Iniciar Câmera</button>
         </div>
         
