--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div id="webcam-container">
             <div id="webcam-wrapper"></div>
             <button id="start-btn">Iniciar Câmera</button>
+            <button id="enviar-btn">Enviar Pergunta</button>
+
         </div>
         
         <div class="results">
